--- a/src/global/mixins.scss
+++ b/src/global/mixins.scss
@@ -3,6 +3,7 @@
 @import 'mixins/mixins_a11y.scss';
 @import 'mixins/mixins_card.scss';
 @import 'mixins/mixins_buttons.scss';
+@import 'mixins/mixins_panel.scss';
 @import 'mixins/mixins_typo.scss';
 @import 'mixins/mixins_grid_layout.scss';
 
