fix: aspect ratio sbb-image

--- a/src/components/sbb-image/sbb-image.scss
+++ b/src/components/sbb-image/sbb-image.scss
@@ -99,6 +99,8 @@
 
 // Variant: Hero Teaser
 .image__figure--teaser-hero .image__wrapper {
+  aspect-ratio: 1 / 1;
+
   @include mq($from: small) {
     aspect-ratio: 16 / 9;
   }
