--- a/src/global/mixins/mixins_panel.scss
+++ b/src/global/mixins/mixins_panel.scss
@@ -53,8 +53,10 @@
   background-color: var(--panel-background-color);
   transition: background var(--sbb-animation-duration-4x) var(--sbb-animation-easing);
 
-  @include ifForcedColors {
-    border: #{px-to-rem-build(1)} solid CanvasText;
+  @include hover-mq($hover: true) {
+    &:hover {
+      --panel-background-color: var(--sbb-color-red-default);
+    }
   }
 }
 
