refactor: 1238 sbb-link-list refactor
- revert slot name on sbb-title
- fix styling issues on sbb-link gap
- refactor sbb-link-list styling regarding horizontal-from selectors
- refactor sbb-link-list title slot approach
- remove button slot from sbb-link-list

BREAKING CHANGE:
- remove button slot from sbb-link-list
- add a named slot of title to sbb-link-list

--- a/src/components/sbb-link/sbb-link.scss
+++ b/src/components/sbb-link/sbb-link.scss
@@ -22,7 +22,6 @@
 .sbb-link {
   display: flex;
   align-items: center;
-  gap: var(--sbb-spacing-fixed-1x);
   color: var(--text-color-normal);
   text-decoration: none;
   word-break: break-word;
@@ -97,6 +96,11 @@ button.sbb-link:disabled {
   .sbb-link:hover:not(:disabled) {
     color: var(--text-color-hover-focus);
   }
+}
+
+.sbb-link--icon-placement-start,
+.sbb-link--icon-placement-end {
+  gap: var(--sbb-spacing-fixed-1x);
 }
 
 .sbb-link--icon-placement-end ::slotted(*),
