--- a/src/components/sbb-link/sbb-link.scss
+++ b/src/components/sbb-link/sbb-link.scss
@@ -95,7 +95,7 @@ button.sbb-link:disabled {
   }
 }
 
-.sbb-link--icon-placement-end ::slotted(*),
+.sbb-link--icon-placement-end ::slotted([slot='icon']),
 .sbb-link--icon-placement-end sbb-icon {
   order: 2;
 }
