--- a/src/components/sbb-teaser-hero/sbb-teaser-hero.scss
+++ b/src/components/sbb-teaser-hero/sbb-teaser-hero.scss
@@ -6,7 +6,7 @@
   @include panel-variables;
 }
 
-.teaser-hero {
+.sbb-teaser-hero {
   position: relative;
   display: block;
 
@@ -15,17 +15,17 @@
   }
 }
 
-.teaser-hero__panel {
+.sbb-teaser-hero__panel {
   @include panel;
   @include absoluteCenterY;
 
   z-index: 1;
 }
 
-.teaser-hero__panel-text {
+.sbb-teaser-hero__panel-text {
   @include panel-text;
 }
 
-.teaser-hero__panel-link {
+.sbb-teaser-hero__panel-link {
   @include fontSmoothing;
 }
