feat: sbb-menu changes

--- a/src/components/sbb-menu-action/sbb-menu-action.scss
+++ b/src/components/sbb-menu-action/sbb-menu-action.scss
@@ -2,6 +2,10 @@
 // travel the shadow boundary are defined through this mixin
 @include host-component-properties;
 
+:host(:focus-within) {
+  outline: none;
+}
+
 .sbb-menu-action__content {
   @include text-xs--regular;
 
