--- a/src/components/sbb-card/sbb-card.scss
+++ b/src/components/sbb-card/sbb-card.scss
@@ -7,13 +7,9 @@
   background-color: var(--sbb-color-white-default);
   width: 100%;
   border-radius: var(--sbb-border-radius-4x);
-  padding-inline: var(--sbb-spacing-responsive-xxs-small);
+  padding-inline: var(--sbb-spacing-responsive-xxs);
   overflow: hidden;
   transition-property: box-shadow var(--sbb-animation-duration-4x) var(--sbb-animation-easing);
-
-  @include mq($from: medium) {
-    padding-inline: var(--sbb-spacing-responsive-xxs-medium);
-  }
 }
 
 :host([size='xs']) {
@@ -21,11 +17,7 @@
 }
 
 :host([size='s']) {
-  padding-block: var(--sbb-spacing-responsive-xxxs-small);
-
-  @include mq($from: medium) {
-    padding-block: var(--sbb-spacing-responsive-xxxs-medium);
-  }
+  padding-block: var(--sbb-spacing-responsive-xxxs);
 }
 
 :host([size='m']) {
@@ -37,25 +29,17 @@
 }
 
 :host([size='xl']) {
-  padding-block: var(--sbb-spacing-responsive-xxs-small);
-
-  @include mq($from: medium) {
-    padding-block: var(--sbb-spacing-responsive-xxs-medium);
-  }
+  padding-block: var(--sbb-spacing-responsive-xxs);
 }
 
-:host(.card__badge[size='m']),
-:host(.card__badge[size='l']),
-:host(.card__badge[size='xl']) {
+:host(.sbb-card__badge[size='m']),
+:host(.sbb-card__badge[size='l']),
+:host(.sbb-card__badge[size='xl']) {
   padding-block-start: var(--sbb-spacing-fixed-6x);
 }
 
 :host([size='xxl']) {
-  padding-block: var(--sbb-spacing-responsive-s-small);
-
-  @include mq($from: medium) {
-    padding-block: var(--sbb-spacing-responsive-s-medium);
-  }
+  padding-block: var(--sbb-spacing-responsive-s);
 }
 
 .card__content {
@@ -63,11 +47,13 @@
   transition: transform var(--sbb-animation-duration-4x) var(--sbb-animation-easing);
 }
 
-:host(:hover) {
-  cursor: pointer;
+@include hover-mq($hover: true) {
+  :host(:hover) {
+    cursor: pointer;
 
-  .card__content {
-    transform: translateY(-2px);
+    .card__content {
+      transform: translateY(-2px);
+    }
   }
 }
 
