--- a/src/components/sbb-card/sbb-card.scss
+++ b/src/components/sbb-card/sbb-card.scss
@@ -3,33 +3,36 @@
 @include host-component-properties;
 
 :host {
-  position: relative;
-  background-color: var(--sbb-color-white-default);
-  width: 100%;
-  border-radius: var(--sbb-border-radius-4x);
-  padding-inline: var(--sbb-spacing-responsive-xxs);
-  overflow: hidden;
-  transition-property: box-shadow var(--sbb-animation-duration-4x) var(--sbb-animation-easing);
-}
+  --sbb-card-padding-block: var(--sbb-spacing-fixed-3x);
 
-:host([size='xs']) {
-  padding-block: var(--sbb-spacing-fixed-3x);
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+  background-color: var(--sbb-color-white-default);
+  border-radius: var(--sbb-border-radius-4x);
+  padding-block: var(--sbb-card-padding-block);
+  padding-inline: var(--sbb-spacing-responsive-xxs);
+  transition: box-shadow var(--sbb-animation-duration-6x) var(--sbb-animation-easing);
 }
 
 :host([size='s']) {
-  padding-block: var(--sbb-spacing-responsive-xxxs);
+  --sbb-card-padding-block: var(--sbb-spacing-responsive-xxxs);
 }
 
 :host([size='m']) {
-  padding-block: var(--sbb-spacing-fixed-3x);
+  --sbb-card-padding-block: var(--sbb-spacing-fixed-3x);
 }
 
 :host([size='l']) {
-  padding-block: var(--sbb-spacing-fixed-4x);
+  --sbb-card-padding-block: var(--sbb-spacing-fixed-4x);
 }
 
 :host([size='xl']) {
-  padding-block: var(--sbb-spacing-responsive-xxs);
+  --sbb-card-padding-block: var(--sbb-spacing-responsive-xxs);
+}
+
+:host([size='xxl']) {
+  --sbb-card-padding-block: var(--sbb-spacing-responsive-s);
 }
 
 :host(.sbb-card__badge[size='m']),
@@ -38,25 +41,23 @@
   padding-block-start: var(--sbb-spacing-fixed-6x);
 }
 
-:host([size='xxl']) {
-  padding-block: var(--sbb-spacing-responsive-s);
-}
-
 .card__content {
   display: block;
-  transition: transform var(--sbb-animation-duration-4x) var(--sbb-animation-easing);
+  transition: transform var(--sbb-animation-duration-6x) var(--sbb-animation-easing);
 }
 
 @include hover-mq($hover: true) {
   :host(:hover) {
+    @include shadow-level-9-hard;
+
     cursor: pointer;
 
     .card__content {
-      transform: translateY(-2px);
+      transform: translateY(#{px-to-rem-build(-2)});
     }
   }
 }
 
 :host(:active) {
-  box-shadow: inset 0 0 0 var(--sbb-border-width-2x) var(--sbb-color-smoke-default);
+  border: var(--sbb-border-width-2x) solid var(--sbb-color-smoke-default);
 }
