--- a/src/components/sbb-pearl-chain-vertical/sbb-pearl-chain-vertical.scss
+++ b/src/components/sbb-pearl-chain-vertical/sbb-pearl-chain-vertical.scss
@@ -1,264 +1,3 @@
-// Default component properties, defined for :host. Properties which can not
-// travel the shadow boundary are defined through this mixin
-@include host-component-properties;
-
-@mixin dot {
-  content: '';
-  position: absolute;
-  width: var(--dot-size);
-  height: var(--dot-size);
-  border-radius: 100%;
-}
-
-@mixin dot--transfer {
-  --dot-size: var(--dot-size-small);
-  @include dot;
-
-  box-sizing: border-box;
-  left: calc(var(--dot-size) / -2 + var(--border-width) / 2);
-  background-color: var(--color-white);
-  border: var(--border-width) solid currentcolor;
-  z-index: 2;
-
-  @include ifForcedColors {
-    .pearl-chain--past & {
-      border-color: GrayText;
-    }
-  }
-}
-
 :host {
-  display: inline-flex;
-  height: 100%;
-
-  --dot-size-large: #{px-to-rem-build(10)};
-  --dot-size-small: #{px-to-rem-build(8)};
-  --border-width: var(--sbb-border-width-2x);
-  --spacing-small: var(--sbb-spacing-fixed-1x);
-  --color-white: var(--sbb-color-white-default);
-  --color-default: var(--sbb-color-black-default);
-  --color-current-location: var(--sbb-color-red-default);
-  --color-current-location-dark: var(--sbb-color-red150-default);
-  --color-cancellation: var(--sbb-color-red-default);
-  --color-past: var(--sbb-color-metal-default);
-}
-
-.pearl-chain {
-  position: relative;
-  box-sizing: border-box;
-  display: inline-flex;
-  flex-direction: column;
-  justify-content: space-between;
-  height: 100%;
-  color: var(--sbb-color-default);
-  margin-inline: calc((var(--dot-size-large) - var(--border-width)) / 2);
-}
-
-// first and last dot
-.pearl-chain::before,
-.pearl-chain::after {
-  --dot-size: var(--dot-size-large);
-  @include dot;
-
-  background-color: currentcolor;
-  left: calc(-2 * var(--border-width));
-  z-index: 3;
-
-  @include ifForcedColors {
-    background-color: CanvasText;
-  }
-}
-
-.pearl-chain--departure::after {
-  display: none;
-}
-
-.pearl-chain--arrival::before {
-  display: none;
-}
-
-.pearl-chain--transfer {
-  &::before {
-    display: none;
-  }
-
-  &::after {
-    @include dot--transfer;
-
-    bottom: 0;
-  }
-}
-
-.pearl-chain--progress::before {
-  color: var(--color-past);
-}
-
-.pearl-chain::before {
-  top: 0;
-}
-
-.pearl-chain::after {
-  top: 100%;
-}
-
-.pearl-chain.pearl-chain--past::before,
-.pearl-chain.pearl-chain--past::after {
-  @include ifForcedColors {
-    background-color: GrayText;
-  }
-}
-
-.pearl-chain--departure-cancellation::before,
-.pearl-chain--arrival-cancellation::after {
-  color: var(--color-cancellation);
-
-  @include ifForcedColors {
-    background-color: ActiveText;
-  }
-}
-
-.pearl-chain--departure-cancellation.pearl-chain--past::before,
-.pearl-chain--arrival-cancellation.pearl-chain--past::after {
-  color: var(--color-past);
-
-  @include ifForcedColors {
-    color: GrayText;
-  }
-}
-
-.pearl-chain--past {
-  color: var(--color-past);
-  position: relative;
-
-  @include ifForcedColors {
-    color: GrayText;
-  }
-}
-
-.pearl-chain__leg {
-  flex-shrink: 0;
-  flex-grow: 0;
-  position: relative;
-  width: var(--border-width);
-  background-color: currentcolor;
-
-  @include ifForcedColors {
-    color: CanvasText;
-  }
-}
-
-.pearl-chain__leg--past {
-  color: var(--color-past);
-}
-
-.pearl-chain__leg--progress::before {
-  color: var(--color-past);
-}
-
-// dot on leg
-
-.pearl-chain__leg:not(:first-child) {
-  &::before {
-    @include dot--transfer;
-  }
-}
-
-.pearl-chain--arrival,
-.pearl-chain--transfer {
-  .pearl-chain__leg {
-    &::before {
-      @include dot--transfer;
-    }
-  }
-}
-
-// line on leg
-.pearl-chain__leg::after {
-  content: '';
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  background-color: currentcolor;
-  z-index: 1;
-
-  @include ifForcedColors {
-    background-color: CanvasText;
-
-    .pearl-chain--past & {
-      background-color: GrayText;
-    }
-  }
-}
-
-.pearl-chain__leg--progress::after {
-  background-color: var(--color-past);
-  width: var(--border-width);
-  height: var(--leg-status);
-}
-
-.pearl-chain__leg--cancellation {
-  color: var(--color-cancellation);
-
-  .pearl-chain--past & {
-    color: var(--color-past);
-
-    @include ifForcedColors {
-      color: GrayText;
-    }
-  }
-
-  @include ifForcedColors {
-    color: ActiveText;
-  }
-}
-
-.pearl-chain__leg--cancellation::after {
-  background-color: unset;
-  background-image: linear-gradient(currentcolor 0%, currentcolor 50%, var(--color-white) 50%);
-  background-size: var(--spacing-small) calc(4 * var(--border-width));
-  width: var(--border-width);
-}
-
-.pearl-chain__leg--cancellation::after,
-.pearl-chain--past .pearl-chain__leg--cancellation::after {
-  @include ifForcedColors {
-    background: none;
-    border-top: #{px-to-rem-build(1)} dashed currentcolor;
-    transform: translateY(#{px-to-rem-build(1)});
-  }
-}
-
-.pearl-chain__position {
-  position: absolute;
-
-  --dot-size: var(--dot-size-large);
-  @include dot;
-
-  background-color: var(--color-current-location);
-  z-index: 4;
-
-  // --status-position: defined in .tsx file
-  top: var(--status-position);
-  animation: pulse 3s infinite;
-  transform: translateX(-50%);
-  left: 50%;
-
-  @include ifForcedColors {
-    background-color: ActiveText;
-  }
-}
-
-.pearl-chain__position--no-animation {
-  animation: unset;
-}
-
-@keyframes pulse {
-  0% {
-    box-shadow: 0 0 0 0 var(--color-current-location-dark);
-  }
-
-  40% {
-    box-shadow: 0 0 0 #{px-to-rem-build(6)} transparent;
-  }
+  border-spacing: 0;
 }
