feat: adapt header-action to new LinkButtonInterface, minor fixes

--- a/src/components/sbb-header/sbb-header.scss
+++ b/src/components/sbb-header/sbb-header.scss
@@ -3,21 +3,16 @@
 @include host-component-properties;
 
 :host {
-  display: block;
-
-  --header-height: #{px-to-rem-build(56)}; // fixme
   --logo-width: #{px-to-rem-build(151.33)}; // fixme
   --logo-height: #{px-to-rem-build(16)}; // fixme
 
   @include mq($from: medium) {
-    --header-height: #{px-to-rem-build(96)}; // fixme
     --logo-width: #{px-to-rem-build(189.17)}; // fixme
     --logo-height: #{px-to-rem-build(20)}; // fixme
   }
-}
 
-.sbb-header--shadow {
-  @include shadow-level-9-soft;
+  display: block;
+  height: var(--sbb-header-height-override, var(--sbb-header-height));
 }
 
 .sbb-header {
@@ -31,6 +26,10 @@
   transition: box-shadow var(--sbb-animation-duration-4x) var(--sbb-animation-easing);
 }
 
+.sbb-header--shadow {
+  @include shadow-level-9-soft;
+}
+
 .sbb-header__wrapper {
   display: flex;
   flex: 0 1 auto;
@@ -38,7 +37,7 @@
   align-items: center;
   justify-content: space-between;
   padding: 0;
-  height: #{px-to-rem-build(56)}; // fixme
+  height: var(--sbb-header-height-override, var(--sbb-header-height));
   width: 100%;
 }
 
