feat: use translation in platform display

--- a/src/components/sbb-timetable-row/sbb-timetable-row.scss
+++ b/src/components/sbb-timetable-row/sbb-timetable-row.scss
@@ -32,6 +32,10 @@ span {
   @include screenReaderOnly;
 }
 
+.timetable__row--platform {
+  margin-inline-end: var(--sbb-spacing-fixed-1x);
+}
+
 // resets lists
 ul {
   display: inline-flex;
